created update and delete agent api
